--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,10 @@
 <%= form_with model: article do |form| %>
+
+  <div>
+    <%= form.label :status %><br>
+    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+  </div>
+
   <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
@@ -14,6 +20,7 @@
       <div><%= message %></div>
     <% end %>
   </div>
+
 
   <div>
     <%= form.submit %>
