--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,24 @@
-<h1>Articles</h1>
+<div class="p-5 mb-4 bg-light rounded-3">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Welcome to my Blog</h1>
+    <p class="col-md-8 fs-4">bla bla, bla</p>
+  </div>
+</div>
 
-Our blog has <%= Article.public_count %> articles and counting!
+<div class="container">
+  <div class="row">
+    <% @articles.each do |article| %>
+      <% unless article.archived? %>
+        <div class="col-4">
+          <%= link_to article.title, article %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
 
 <ul>
-  <% @articles.each do |article| %>
-    <% unless article.archived? %>
-      <li>
-        <%= link_to article.title, article %>
-      </li>
-    <% end %>
-  <% end %>
+
 </ul>
 
-<%= link_to "New Article", new_article_path %>
+<%#= link_to "New Article", new_article_path %>
