--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,8 +12,7 @@
         <% unless article.archived? %>
           <div class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= article.title %></title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= article.title %></text></svg>
-
+              <%= image_tag url_for(article.cover), height: "210px" %>
               <div class="card-body">
                 <%= link_to article.title, article %>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
