--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,28 +1,28 @@
 <%= form_with model: article do |form| %>
 
-  <div>
-    <%= form.label :status %><br>
+  <div  class="mb-3">
+    <%= form.label :status, class: "form-label" %><br>
     <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
   </div>
 
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
+  <div  class="mb-3">
+    <%= form.label :title, class: "form-label" %><br>
+    <%= form.text_field :title, class: "form-control" %>
     <% article.errors.full_messages_for(:title).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %><br>
+  <div  class="mb-3">
+    <%= form.label :body, class: "form-label" %><br>
+    <%= form.text_area :body, class: "form-control" %><br>
     <% article.errors.full_messages_for(:body).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
 
 
-  <div>
-    <%= form.submit %>
+  <div  class="mb-3">
+    <%= form.submit "Save", class: "btn btn-success btn-block" %>
   </div>
 <% end %>
