--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>Edit Article</h1>
+<div class="container my-5">
+  <h1>Edit Article</h1>
 
-<%= render "form", article: @article %>
+  <%= render "form", article: @article %>
+</div>
+
