--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,18 +1,19 @@
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
-  <p>
-    <%= form.label :status %><br>
-    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
-  </p>
-
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
+  <form>
+    <div class="pb-3">
+      <%= form.label :commenter, style: "display: block", class: "form-label" %>
+      <%= form.select :status, ['public', 'private', 'archived'], selected: 'public',  input_html: {class: 'form-select'} %>
+    </div>
+    <div class="mb-3">
+      <%= form.label :commenter, style: "display: block", class: "form-label" %>
+      <%= form.text_area :commenter, class: "form-control" %>
+    </div>
+    <div class="mb-3">
+      <%= form.label :body, style: "display: block", class: "form-label"  %><br>
+      <%= form.text_area :body,  class: "form-control"  %>
+    </div>
+    <div class="mb-3">
+      <%= form.submit "Save", class: "btn btn-success btn-block" %>
+    </div>
+  </form>
 <% end %>
