styles(ui): css

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,7 +13,7 @@
       <%= form.text_area :body,  class: "form-control"  %>
     </div>
     <div class="mb-3">
-      <%= form.submit "Save", class: "btn btn-success btn-block" %>
+      <%= form.submit "Save", style: "display: block", class: "btn btn-success btn-block" %>
     </div>
   </form>
 <% end %>
