--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+      <!--<ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/articles">Articles</a>
         </li>
@@ -14,7 +14,7 @@
       <a class="navbar-brand px-3" href="#">
         <i class="bi bi-person-circle"></i>
         My account
-      </a>
+      </a>-->
     </div>
   </div>
 </nav>
