--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,16 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @user %>
-
-<div>
-  <%= link_to "Edit this user", edit_user_path(@user) %> |
-  <%= link_to "Back to users", users_path %>
-
-  <%= button_to "Destroy this user", @user, method: :delete %>
+<div class="container">
+  <p style="color: green"><%= notice %></p>
+  <%= render @user %>
+  <%= link_to "Edit this user", edit_user_path(@user) %> |  <%= link_to "Back to users", users_path %>
+  <!--<div class="row">
+    <div class="container mt-5">
+      <%#= button_to "Destroy this user", @user, method: :delete %>
+    </div>
+  </div>-->
 </div>
+<!--<div class="container">
+  <h3 class="mt-4">Articles</h3>
+  <%#= render "articles/article" %>
+</div>-->
+
+
