--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,12 +9,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/articles">Articles</a>
         </li>
-      </ul>
-
-      <a class="navbar-brand px-3" href="#">
-        <i class="bi bi-person-circle"></i>
-        My account
-      </a>-->
+      </ul>-->
+      <%= link_to 'My account', login_path, :class => "nav-item navbar-brand px-3" %>
+      <%= link_to 'Logout', logout_path, :class => "nav-item navbar-brand px-3", data: { turbo_method: :delete } %>
     </div>
   </div>
 </nav>
