--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render "layouts/navbar" %>
+    <%= render 'layouts/messages' %>
     <%= yield %>
     <%= render "layouts/footer" %>
   </body>
