--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,33 @@
     </div>
   </div>-->
 </div>
-<!--<div class="container">
-  <h3 class="mt-4">Articles</h3>
-  <%#= render "articles/article" %>
-</div>-->
+<div class="album py-5 mb-5">
+  <div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+      <% @articles.each do |article| %>
+        <% unless article.archived? %>
+          <div class="col">
+            <div class="card shadow-sm">
+              <%= image_tag url_for(article.cover), height: "210px" %>
+              <div class="card-body">
+                <%= link_to article.title, article %>
+                <p font-italic pb-2>
+                  by <%= article.user.username if article.user%>
+                </p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to 'View', article %></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <% end %>
+      <% end %>
+
+    </div>
+  </div>
 
 
