--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,6 +14,9 @@
       </ul>
     </div>
   </div>
+
+    <%= image_tag url_for(@article.cover), width: "410px" %>
+
   <div class="row">
     <p><%= @article.body %></p>
   </div>
