--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,11 +5,17 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
-      <!--<ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/articles">Articles</a>
-        </li>
-      </ul>-->
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          Articles
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <%= link_to "View articles", articles_path, class: "dropdown-item" %>
+          <% if logged_in? %>
+            <%= link_to "Create new article", new_article_path, class: "dropdown-item" %>
+          <% end %>
+        </ul>
+      </div>
       <% if logged_in? %>
         <%= link_to current_user.username, user_path(current_user), :class => "nav-item navbar-brand px-3" %>
         <%= link_to 'Logout', logout_path, :class => "nav-item navbar-brand px-3", data: { turbo_method: :delete } %>
