--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,7 +18,9 @@
                 <p font-italic pb-2>
                   by <%= article.user.username if article.user%>
                 </p>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">
+                  <% article.body %>
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to 'View', article %></button>
