--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,15 +4,17 @@
       <h1><%= @article.title %></h1>
       <p>by <%= @article.user.username if @article.user %></p>
     </div>
-    <div class="col-2">
-      <ul>
-        <li><%= link_to "Edit", edit_article_path(@article) %></li>
-        <li><%= link_to "Destroy", article_path(@article), data: {
-          turbo_method: :delete,
-          turbo_confirm: "Are you sure?"
-        } %></li>
-      </ul>
-    </div>
+    <% if logged_in? && @article.user == current_user %>
+      <div class="col-2">
+        <ul>
+          <li><%= link_to "Edit", edit_article_path(@article) %></li>
+          <li><%= link_to "Destroy", article_path(@article), data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure?"
+          } %></li>
+        </ul>
+      </div>
+    <% end %>
   </div>
 
     <%= image_tag url_for(@article.cover), width: "410px" %>
