--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,11 @@
                 <p font-italic pb-2>
                   by <%= article.user.username if article.user%>
                 </p>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="card-text">
+                  <div class="card-body text-truncate">
+                    <%= article.body %>
+                  </div>
+                  </div>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to 'View', article %></button>
