--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container mt-2">
   <%= render @user %>
-  <%= link_to "Edit this user", edit_user_path(@user) %> |  <%= link_to "Back to users", users_path %>
+  <% if logged_in? && @user == current_user %>
+  <%= link_to "Edit this user", edit_user_path(@user) %> | <% end %>  <%= link_to "Back to users", users_path %>
   <!--<div class="row">
     <div class="container mt-5">
       <%#= button_to "Destroy this user", @user, method: :delete %>
