--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,15 @@
 <div class="container mt-2">
+  <div class="row float-end">
+  </div>
   <%= render @user %>
   <% if logged_in? && @user == current_user %>
-  <%= link_to "Edit this user", edit_user_path(@user) %> | <% end %>  <%= link_to "Back to users", users_path %>
+
+  <%= link_to "Edit this user", edit_user_path(@user) %> |  <%= link_to "Back to users", users_path %> |
+  <%= link_to "Destroy", user_path(@user), data: {
+    turbo_method: :delete,
+    turbo_confirm: "Are you sure?"
+  } %>
+  <% end %>
   <!--<div class="row">
     <div class="container mt-5">
       <%#= button_to "Destroy this user", @user, method: :delete %>
