--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,7 +21,7 @@
       <% if logged_in? %>
         <div class="dropdown">
           <button class="btn navbar-brand dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-            Profile [<%= current_user.username %>]
+            <%= "(admin)" if current_user.admin? %> Profile [<%= current_user.username %>]
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
             <%= link_to 'View my profile', user_path(current_user), class: "dropdown-item" %>
